# GrandFinale

./: .gitignore
CppServerForUnity/: CMakeLists.txt  Player.h  Room.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp  stdafx.h
NetworkTest/: .gitignore
NetworkTest/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
NetworkTest/Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
NetworkTest/Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  Default Local Group.asset
NetworkTest/Assets/Network/: Cube.prefab  GameManager.cs  NetworkManager.cs  NetworkModels.cs  NetworkScripts.asmdef  NetworkedPlayerController.cs  PlayerController.cs  PlayerListItem.prefab  RoomList Item.prefab
NetworkTest/Assets/Network/UI/: PlayerListItem.cs  RoomListItem.cs  UIManager.cs
NetworkTest/Assets/Player/: BodySlopeHandler.cs  CharacterMove.cs
NetworkTest/Assets/Player/CM_Camera/: CameraSwitcher.cs
NetworkTest/Assets/Player/Prefabs/: Bullet.prefab  Player.prefab
NetworkTest/Assets/Player/SMB/: CrouchState.cs  IdleState.cs  InAirState.cs  JumpState.cs  RollState.cs
NetworkTest/Assets/Player/Scenes/: OfflineTest.unity
NetworkTest/Assets/Player/Scripts/: CameraController.cs  IPoolable.cs  InputHandler.cs  ObjectPool.cs  PoolManager.cs  ViewingResistance.cs  Weapon.cs  WeaponController.cs
NetworkTest/Assets/Scenes/: NetworkScene.unity  OfflineScene.unity
NetworkTest/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
(+23 files in other folders)
